[project]
name = "cron_expression_parser"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Cron Expression Parser"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
cron-expression-parser = "cron_expression_parser:run"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-Werror"
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
